tests/chapter_17/invalid_types/incomplete_types/void_array.c
int main(void) {
    void arr[3];
    return 0;
}